force-app/main/default/objects/SAP__c/SAP__c.object-meta.xml
<CustomObject>
    <label>SAP</label>
    <nameField>
        <displayFormat>SAP-{0000}</displayFormat>
        <label>SAP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>