force-app/main/default/objects/SAP__c/fields/Edit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Edit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Flag</label>
    <type>Checkbox</type>
</CustomField>