force-app/main/default/objects/SAP__c/fields/Sample_Display__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Display</label>
    <referenceTo>Sample_Display__c</referenceTo>
    <relationshipLabel>SAP</relationshipLabel>
    <relationshipName>SAP</relationshipName>
    <type>Lookup</type>
</CustomField>