force-app/main/default/objects/SAP__c/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <label>SAP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>