force-app/main/default/objects/SAP__c/fields/Storage_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Description__c</fullName>
    <label>Storage Location Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>