force-app/main/default/objects/SAP__c/fields/ZD_Name__c.field-meta.xml
<CustomField>
    <fullName>ZD_Name__c</fullName>
    <label>ZD Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>